[refactor] improve MenuService and Menu entity structure